--- a/software/skiptrap/Makefile
+++ b/software/skiptrap/Makefile
@@ -1,4 +1,6 @@
 # Skip-trap demo build rules
 FILE ?= skiptrap
+# Enable atomic (A) extension for AMO tests
+FLAG_MARCH = -march=rv64imafdca
 LINKER_SCRIPT = ../simple/linker.lcf
 include ../common.mk
